docs(photo): create docs for /photos routes
